--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,23 @@
 body {
-  background: pink;
+  background-color: pink;
+}
 
 h1 {
   color: blue;
-  fontsize: 3em; 
+  font: 3em; 
 }
 
 h2 {
   color: green;
-  font-weight: normal
-  font-style: italic;
+  font-weight: normal;
+  font-family: italic;
 }
 
 .completed {
-  font-family: 12px;
+  font: 12px;
 }
 
-#tasks .completed 
-  backgound: #ccc;
+#tasks .completed {
+  background-color: #ccc;
   text-decoration: underline;
 }
