--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,23 @@
 body {
   background: pink;
+  } /*Added } to end of selector statement */
 
 h1 {
   color: blue;
-  fontsize: 3em; 
+  font-size: 3em; 
 }
 
 h2 {
   color: green;
-  font-weight: normal
+  font-weight: normal; /*Added ; to end of declaration */
   font-style: italic;
 }
 
 .completed {
-  font-family: 12px;
+  font-size: 12px; /* changed font-family to font-size */
 }
 
-#tasks .completed 
-  backgound: #ccc;
+#tasks .completed { /*Added { to open selector */
+  background: #ccc; /* spelled background correctly */
   text-decoration: underline;
 }
