--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,23 @@
 body {
-  background: pink;
+  background: pink; 
+}
 
 h1 {
   color: blue;
-  fontsize: 3em; 
+  font-weight: 3em; 
 }
 
 h2 {
   color: green;
-  font-weight: normal
-  font-style: italic;
+  font-weight: normal;
+  font-family: italic, serif, georgia;
 }
 
 .completed {
   font-family: 12px;
 }
 
-#tasks .completed 
-  backgound: #ccc;
+#tasks li {
+  background: #ccc;
   text-decoration: underline;
 }
