--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,21 @@
 body {
   background: pink;
+}
 
-h1 {
+  h1 {
   color: blue;
-  fontsize: 3em; 
+  font-size: 3em; 
 }
 
 h2 {
   color: green;
-  font-weight: normal
+  font-weight: normal;
   font-style: italic;
 }
 
-.completed {
-  font-family: 12px;
-}
 
-#tasks .completed 
-  backgound: #ccc;
-  text-decoration: underline;
-}
+
+#tasks li.completed {
+   font-size: 12px;
+  background: #ccc;
+  text-decoration: underline;}
