used the validator to correct mistakes in code

--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,26 @@
 body {
   background: pink;
+  text-decoration: underline;
+}
 
 h1 {
   color: blue;
-  fontsize: 3em; 
+  font-size: 12pt; 
 }
 
 h2 {
   color: green;
-  font-weight: normal
+  font-weight: normal;
   font-style: italic;
 }
 
 .completed {
-  font-family: 12px;
+  font-family: Arial;
 }
 
-#tasks .completed 
-  backgound: #ccc;
+#tasks .completed {
+  background: #ccc;
   text-decoration: underline;
 }
+
+/* Used the validator to correct the mistakes */
