--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,9 @@ h2 {
   font-style: italic;
 }
 
-/*.completed {
-  font-family: 12px;
-}*/
+.completed {
+  font-size: 12px;
+}
 
 #tasks .completed {
   background: #ccc;
