--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
 }
 h1 {
   color: blue;
-
+font-size: 3em;
 }
 
 h2 {
@@ -13,9 +13,10 @@ h2 {
 }
 
 .completed {
-  font-size: 12pt;
+  font-size: 12px;
 }
 
 #tasks .completed {
+  background: #ccc;
   text-decoration: underline;
 }
