--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,25 @@
+
 body {
-  background: pink;
+  background: #FFC0CB;
+}
 
 h1 {
-  color: blue;
-  fontsize: 3em; 
+  color: #0000FF;
+  font-size: 3em; 
 }
 
 h2 {
-  color: green;
-  font-weight: normal
+  color: #008000;
+  font-weight: normal;
   font-style: italic;
 }
 
 .completed {
-  font-family: 12px;
+  font-size: 12px;
 }
 
-#tasks .completed 
-  backgound: #ccc;
-  text-decoration: underline;
+#tasks .completed {
+ background: #CCC; 
+ text-decoration: underline;
+
 }
