--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
 body {
   background: pink;
+}
+
 
 h1 {
   color: blue;
-  fontsize: 3em; 
+  font-size: 3em; 
 }
 
 h2 {
@@ -16,7 +18,7 @@ h2 {
   font-family: 12px;
 }
 
-#tasks .completed 
-  backgound: #ccc;
+#tasks .completed {
+  background: #ccc;
   text-decoration: underline;
 }
