--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 body {
   background: pink;
-
+}
 h1 {
   color: blue;
-  fontsize: 3em; 
+  fontsize: 3em;
 }
 
 h2 {
@@ -16,7 +16,7 @@ h2 {
   font-family: 12px;
 }
 
-#tasks .completed 
+#tasks .completed {
   backgound: #ccc;
   text-decoration: underline;
 }
