--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 body {
   background: pink;
-  text-decoration: underline;
 }
 
 h1 {
   color: blue;
+  font-size: 3em;
 }
 
 h2 {
@@ -14,9 +14,10 @@ h2 {
 }
 
 .completed {
-  font-family: serif;
+  font-size: 12px;
 }
 
 #tasks .completed {
+  background: #ccc;
   text-decoration: underline;
 }
