--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,22 @@
 body {
   background: pink;
-
-h1 {
+}
+  h1 {
   color: blue;
-  fontsize: 3em; 
-}
+  font-size: 3em;
+  }
 
-h2 {
+  h2 {
   color: green;
-  font-weight: normal
+  font-weight: normal;
   font-style: italic;
-}
+  }
 
-.completed {
-  font-family: 12px;
-}
+  .completed {
+  font-family: TimesNewRoman;
+  }
 
-#tasks .completed 
-  backgound: #ccc;
+  #tasks .completed {
+  background: #ccc;
   text-decoration: underline;
-}
+  }
