--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,43 @@
 body {
-  background: pink;
-
+  background-color: pink;
+}
 h1 {
   color: blue;
-  fontsize: 3em; 
+  font-size: 3em;
 }
 
 h2 {
   color: green;
-  font-weight: normal
+  font-weight: normal;
   font-style: italic;
 }
 
 .completed {
-  font-family: 12px;
+  font-size: 12px;
 }
 
-#tasks .completed 
-  backgound: #ccc;
+#tasks .completed {
+  background-color: #ccc;
+  text-decoration: underline;
+}body {
+  background-color: pink;
+}
+h1 {
+  color: blue;
+  font-size: 3em;
+}
+
+h2 {
+  color: green;
+  font-weight: normal;
+  font-style: italic;
+}
+
+.completed {
+  font-size: 12px;
+}
+
+#tasks .completed {
+  background-color: #ccc;
   text-decoration: underline;
 }
