--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,24 @@
-body {
-  background: pink;
-
-h1 {
-  color: blue;
-  fontsize: 3em; 
+#body {
+background : pink;
+text-decoration : underline;
 }
 
-h2 {
+#h1 {
+  color: blue;
+  font-size: 3em;
+}
+
+#h2 {
   color: green;
-  font-weight: normal
+  font-weight: normal;
   font-style: italic;
 }
 
 .completed {
-  font-family: 12px;
+  font-family: "Times New Roman";
 }
 
-#tasks .completed 
-  backgound: #ccc;
+#tasks .completed {
+  background-color: #ccc;
   text-decoration: underline;
 }
