--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,15 @@
 body {
   background: pink;
+}
 
 h1 {
   color: blue;
-  fontsize: 3em; 
+  fontsize: 16px;
 }
 
 h2 {
   color: green;
-  font-weight: normal
+  font-weight: normal;
   font-style: italic;
 }
 
@@ -16,7 +17,7 @@ h2 {
   font-family: 12px;
 }
 
-#tasks .completed 
-  backgound: #ccc;
+#tasks .completed {
+  backgound: #fff;
   text-decoration: underline;
 }
