--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
 
 h1 {
   color: blue;
-  fontsize: 16px;
+  font-size: 16px;
 }
 
 h2 {
@@ -14,10 +14,10 @@ h2 {
 }
 
 .completed {
-  font-family: 12px;
+  font-size: 12px;
 }
 
 #tasks .completed {
-  backgound: #fff;
+  background: #fff;
   text-decoration: underline;
 }
