--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,18 @@
 body {
-  background: pink;
-
+  background: blue;
 h1 {
   color: blue;
-  fontsize: 3em; 
+  fontsize: 3em;
 }
-
 h2 {
   color: green;
   font-weight: normal
   font-style: italic;
 }
-
 .completed {
   font-family: 12px;
 }
-
-#tasks .completed 
+#tasks .completed
   backgound: #ccc;
   text-decoration: underline;
 }
