--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 body {
-  background: pink;
+  background: pink;}
 
 h1 {
   color: blue;
-  fontsize: 3em; 
+  fontsize: 3em;
 }
 
 h2 {
@@ -16,7 +16,13 @@ h2 {
   font-family: 12px;
 }
 
-#tasks .completed 
+#tasks .completed {
   backgound: #ccc;
   text-decoration: underline;
 }
+
+/*
+
+Your link was broken, so I am not sure what you are expecting. I will fix it by hand.
+
+*/
