--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,23 @@
-body {
+p {
   background: pink;
-
-h1 {
-  color: blue;
-  fontsize: 3em; 
 }
 
-h2 {
+#title {
+  color: blue;
+  font-size: 3em;
+}
+
+h2.italic {
   color: green;
-  font-weight: normal
+  font-weight: normal;
   font-style: italic;
 }
 
 .completed {
-  font-family: 12px;
+  font-size: 12px;
 }
 
-#tasks .completed 
-  backgound: #ccc;
+#tasks .completed {
+  background-color:#cccccc;
   text-decoration: underline;
 }
