--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,22 @@
 body {
-  background: pink;
-
+  background-color: #FFC0CB;
+}
 h1 {
   color: blue;
-  fontsize: 3em; 
+  font-size: 3em;
 }
 
 h2 {
   color: green;
-  font-weight: normal
+  font-weight: normal;
   font-style: italic;
 }
 
 .completed {
-  font-family: 12px;
+  font-family: "Times New Roman", Georgia, serif;
 }
 
-#tasks .completed 
-  backgound: #ccc;
+#tasks .completed {
+  background-color: #FFC0CB;
   text-decoration: underline;
 }
