--- a/css/style.css
+++ b/css/style.css
@@ -3,20 +3,20 @@ body {
 
 h1 {
   color: blue;
-  fontsize: 3em; 
+  font-size: 3em;
 }
 
 h2 {
   color: green;
-  font-weight: normal
-  font-style: italic;
+  font-weight: normal;
+  text-decoration: italic;
 }
 
 .completed {
   font-family: 12px;
 }
 
-#tasks .completed 
-  backgound: #ccc;
+#tasks .completed{
+  background: #ccc;
   text-decoration: underline;
 }
