--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,27 @@
 body {
-  background: pink;
+  background: aquamarine;
+}
 
 h1 {
   color: blue;
-  fontsize: 3em; 
+  font-size: 3em; 
 }
 
 h2 {
   color: green;
-  font-weight: normal
+  font-weight: normal;
   font-style: italic;
 }
 
 .completed {
-  font-family: 12px;
+  font-family: "Times New Roman";
 }
 
-#tasks .completed 
-  backgound: #ccc;
+#tasks .completed {
+  background: white;
   text-decoration: underline;
+}
+
+.cat {
+  background-color: purple;
 }
