--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,23 @@
 body {
   background: pink;
+}
 
 h1 {
   color: blue;
-  fontsize: 3em; 
+  fontsize: 3em;
 }
 
 h2 {
   color: green;
-  font-weight: normal
+  fontsize: 2em;
   font-style: italic;
 }
 
 .completed {
-  font-family: 12px;
+  fontsize: 5em;
 }
 
-#tasks .completed 
-  backgound: #ccc;
+#tasks .completed {
+  background-color: #ccc;
   text-decoration: underline;
 }
