--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,8 @@ h2 {
 }
 
 .completed {
-  font-family: "New Times Roman";
+  font-family: "New Times Roman"
+  font-size: 12px;
 }
 
 #tasks .completed {
