--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,10 @@ h2 {
 }
 
 .completed {
-  font-size: 12em;
+  font-size: 12px;
 }
 
-#tasks.completed {
+#tasks .completed {
   background: #ccc;
   text-decoration: underline;
 }
