--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,10 @@ h2 {
 
 .completed {
   font-family: Arial;
+  font-size: 12px;
 }
 
 #tasks .completed {
-  background-color: #ccc;
+  background: #ccc;
   text-decoration: underline;
 }
