--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,10 @@ h2 {
 }
 
 .completed {
-  font-family: Helvetica;
+  font-size: 12px;
 }
 
 #tasks .completed {
-  background-color: #ccc;
+  background: #ccc;
   text-decoration: underline;
 }
