--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
 
 h1 {
   color: blue;
-  font: 3em; 
+  font-size: 3em; 
 }
 
 h2 {
@@ -13,11 +13,12 @@ h2 {
   font-style: italic;
 }
 
-.completed {
-  font: 12px;
+ .completed {
+  font-family: 12px;
+  font-size: 12px;
 }
 
 #tasks .completed {
-  background-color: #ccc;
+  background: #ccc;
   text-decoration: underline;
 }
