--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,31 @@
 body {
-  background pink;
+  background: pink;
 }
 
 h1 {
   color: blue;
-  fontsize: 3em; 
+  font-size: 3em; 
 }
 
 h2 {
   color: green;
-  font-weight: normal
+  font-weight: normal; /* For headings, the default font-weight is BOLD, not normal.*/
   font-style: italic;
 }
 
 .completed {
-  font-family: 12px;
+  font-size: 12px; 
+  /* I could have also given a valid font-family value instead, but that would fail the Rspec tests. */
 }
 
 #tasks .completed {
-  backgound: #ccc;
+  background: #ccc;
   text-decoration: underline;
 }
+
+/* I added these below to standardize the hyperlink colors. See https://www.w3.org/TR/html5/rendering.html#non-replaced-elements-phrasing-content */
+
+a:link { color: #0000EE; }
+a:visited { color: #551A8B; }
+a:hover { color: yellow; } /* Non-standard; just for fun! */
+a:link:active, :visited:active { color: red; }
